# newsletter

./: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  README.md  TODO.md  langgraph.json  pyproject.toml
.github/: .gitmessage  CONVENTIONS.md  PULL_REQUEST_TEMPLATE.md  conventions.js.md  conventions.py.md  copilot-instructions.md  labels.json
.github/ISSUE_TEMPLATE/: feature_issue.yml  fix_issue.yml  refactor_issue.yml
data/: rss_feeds.csv  sources.csv
newsletter/: app.py  prompts.py
newsletter/graph/: graph.py  parse.py  state.py  visualize.py
newsletter/graph/nodes/: confirm.py  crawling.py  creator.py  editor.py  generator.py  search.py  search_optimizer.py  summary.py
newsletter/tools/: crawl.py  search.py
newsletter/utils/: graph.py
proposal/: LEAN_CANVAS.md  PROPOSAL.md
src/: app.py  newsletter_generator.py
src/agent/: agent.py
src/agent/nodes/: crawler.py  crawling.py  critique.py  curator.py  generator.py  rss_finder.py  search.py  search_optimizer.py  sender.py  summarizer.py  summary.py
src/agent/utils/: file_utils.py  parse.py  prompts.py  rss_parse.py  state.py  visualize.py
tests/: sources.csv
tests/api/: crawl4ai.py  deepsearchnews.py  duckduckgo.py  firecrawl.py  google_cse.py  kakao.py  mediastack.py  naver.py  newsapi.py  newsdata.py  perplexity.py  tavily.py  utils.py
tests/rss/: README.md  googlenews.py  news.py  rss.csv  rss.py
