[tool.poetry]
name = "newsletter"
version = "0.1.0"
description = ""
authors = ["seungwonme <seungwonan.me@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.2,<=3.12"
python-dotenv = "^1.0.1"
langchain = "^0.3.13"
langchain-community = "^0.3.13"
langgraph = "^0.2.60"
markdownify = "^0.14.1"
pre-commit = "^4.0.1"
ipython = "^8.31.0"
tavily-python = "^0.5.0"
langchain-openai = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  tests/data/
  | profiling/
  | scripts/generate_schema.py  # Uses match syntax
)
'''
# We use the unstable style for formatting Black itself. If you
# want bug-free formatting, you should keep this off. If you want
# stable formatting across releases, you should also keep `preview = true`
# (which is implied by this flag) off.
unstable = true

# Build system information and other project-specific configuration below.
# NOTE: You don't need this in your own Black configuration.
