[project]
name = "newsletter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "ipython>=8.32.0",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.6",
    "langgraph>=0.2.74",
    "markdownify>=0.14.1",
    "pre-commit>=4.1.0",
    "python-dotenv>=1.0.1",
]

[tool.black]
target-version = ['py313']
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
preview = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
