[project]
name = "newsletter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.2"
dependencies = [
    "ipython>=8.32.0",
    "python-dotenv>=1.0.1",
    "langchain>=0.3.19",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.6",
    "langgraph>=0.2.74",
    "pytz>=2025.1",
    "pandas>=2.2.3",
    "crawl4ai>=0.4.248",
    "pycountry>=24.6.1",
    "markdown2>=2.5.3",
    "premailer>=3.10.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pre-commit>=4.1.0",
    "tavily-python>=0.5.1",
    "firecrawl-py>=1.12.0",
    "newsapi-python>=0.2.7",
    "newsdataapi>=0.1.21",
    "duckduckgo-search>=7.3.2",
    "google-api-python-client>=2.162.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.1",
]

[tool.black]
target-version = ['py313']
line-length = 100
include = '\.pyi?$'
exclude = '''
/(
    \.git
| \.hg
| \.mypy_cache
| \.tox
| \.venv
| _build
| buck-out
| build
)/
'''
preview = true

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "dist"]
max-complexity = 10

[tool.isort]
atomic = true

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
